--- a/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.json
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,4433;Database=FactsDb;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FactsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
