--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Calabonga.AspNetCore.Controllers" Version="1.1.2" />
     <PackageReference Include="Calabonga.EntityFrameworkCore.Entities.Base" Version="3.0.0" />
     <PackageReference Include="Calabonga.Microservices.Core" Version="3.0.0" />
+    <PackageReference Include="Calabonga.UnitOfWork" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.3" />
