--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-Calabonga.Facts.Web-12D08E8E-C85C-41F9-AF04-2F95B8856C5D</UserSecretsId>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="Calabonga.AspNetCore.Controllers" Version="1.1.2" />
-    <PackageReference Include="Calabonga.EntityFrameworkCore.Entities.Base" Version="3.0.0" />
+    <PackageReference Include="Calabonga.AspNetCore.Controllers" Version="3.0.0-beta1" />
+    <PackageReference Include="Calabonga.EntityFrameworkCore.Entities.Base" Version="3.0.1" />
     <PackageReference Include="Calabonga.Microservices.Core" Version="3.0.0" />
     <PackageReference Include="Calabonga.UnitOfWork" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.3" />
@@ -22,7 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
