--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -11,10 +11,10 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-    <PackageReference Include="Calabonga.AspNetCore.Controllers" Version="3.0.0-beta1" />
+    <PackageReference Include="Calabonga.AspNetCore.Controllers" Version="3.0.0" />
     <PackageReference Include="Calabonga.EntityFrameworkCore.Entities.Base" Version="3.0.1" />
-    <PackageReference Include="Calabonga.Microservices.Core" Version="3.0.0" />
-    <PackageReference Include="Calabonga.UnitOfWork" Version="2.0.0" />
+    <PackageReference Include="Calabonga.Microservices.Core" Version="3.0.1" />
+    <PackageReference Include="Calabonga.UnitOfWork" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.4" />
