--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -38,4 +38,8 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calabonga.Facts.RazorLibrary\Calabonga.Facts.RazorLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
