--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -33,6 +33,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
