Добавлены настройка DetailedErrors
для отображения более детальной информации при ошибках в Blazor

--- a/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.Development.json
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true,
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,4433;Database=FactsDb;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;MultipleActiveResultSets=true"
   },
