--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Calabonga.Facts.Web.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Calabonga.Facts.Contracts\Calabonga.Facts.Contracts.csproj" />
     <ProjectReference Include="..\Calabonga.Facts.RazorLibrary\Calabonga.Facts.RazorLibrary.csproj" />
   </ItemGroup>
 
