--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Properties/launchSettings.json
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "Kesterl": {
+    "Kestrel": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
