--- a/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.Development.json
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "DetailedErrors": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,4433;Database=FactsDb;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,4433;Database=FactsDb;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;MultipleActiveResultSets=true",
+    "MyKeysContext": "Server=localhost,4433;Database=FactsDb;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;"
   },
   "Logging": {
     "LogLevel": {
