--- a/src/Calabonga.Facts/Calabonga.Facts.RazorLibrary/Calabonga.Facts.RazorLibrary.csproj
+++ b/src/Calabonga.Facts/Calabonga.Facts.RazorLibrary/Calabonga.Facts.RazorLibrary.csproj
@@ -1,16 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
-  
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" />
+    <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
